[package]
name = "rencrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
base64 = "0.13.0"
clap = "2.34.0"
flate2 = "1.0.22"
rand = "0.8.4"
thiserror = "1.0.30"
tinyfiledialogs = "3.0"
